# rsocket-benchmarks

./: .gitignore  README.md  benchmark.sh  build.gradle  settings.gradle
go/: benchmark.go  client.go  echoserver.go  go.mod  go.sum  main.go
java/: build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/io/benchmarker/rsocket/: BenchmarkClient.java  BenchmarkSocket.java  RingStream.java  Run.java  Server.java
resources/: PayloadA.json  PayloadB.json  PayloadC.json  PayloadD.json  PayloadE.json
rust/: Cargo.toml
rust/src/: benchmark_socket.rs  client.rs  main.rs  ring_iter.rs  server.rs  single_client.rs
