[package]
name = "rust"
version = "0.1.0"
authors = ["Derek A <5204543-olderek@users.noreply.gitlab.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["macros", "tcp", "dns", "io-util", "fs"] }
rsocket_rust =  "0.5.2"  # { path = "/home/derek/projects/rsocket-benchmarks/rust/rsocket-rust/rsocket" }
log = "*"
env_logger = "*"
futures = "*"
histogram = "*"
serde_json = "1.0"
bytes = "0.5.4"

# choose transport:
rsocket_rust_transport_tcp = "*"  #  { path = "/home/derek/projects/rsocket-benchmarks/rust/rsocket-rust/rsocket-transport-tcp" }
# rsocket_rust_transport_websocket = "*"

[[bin]]
path = "src/main.rs"
name = "main"